--- a/Views/Common/SyncMsg_List.cshtml
+++ b/Views/Common/SyncMsg_List.cshtml
@@ -1,59 +1,90 @@
-﻿<link href="/js/Extjs42/resources/css/ext-all-gray.css" rel="stylesheet" type="text/css" />
-<script src="/js/Extjs42/bootstrap.js" type="text/javascript"></script>
-<script type="text/javascript">
-    var gridpanel;
-    Ext.onReady(function () {
-
-
-        var store = Ext.create('Ext.data.JsonStore', {
-            fields: ['ID', 'FWONO', 'SOURCE', 'TEXT', 'STATUS', 'CREATETIME'],
-            pageSize: 20,
-            proxy: {
-                type: 'ajax',
-                url: '/Common/LoadMsgList',
-                reader: {
-                    root: 'rows',
-                    type: 'json',
-                    totalProperty: 'total'
-                }
-            },
-            autoLoad: true,
-            listeners: {
-            }
-        })
-
-        var pgbar = Ext.create('Ext.toolbar.Paging', {
-            displayMsg: '显示 {0} - {1} 条,共计 {2} 条',
-            store: store,
-            id: 'pagebar',
-            displayInfo: true
-        })
-        gridpanel = Ext.create('Ext.grid.Panel', {
-            renderTo: "div_foo",
-            store: store,
-            height: 500,
-            selModel: { selType: 'checkboxmodel' },
-            bbar: pgbar,
-            enableColumnHide: false,
-            columns: [
-            { xtype: 'rownumberer', width: 35 },
-            { header: 'ID', dataIndex: 'ID', hidden: true },
-            { header: 'FWO号', dataIndex: 'FWONO', width: 200 },
-            { header: '来源', dataIndex: 'SOURCE', width: 200 },
-            { header: '描述', dataIndex: 'TEXT', width: 280 },
-            { header: '状态', dataIndex: 'STATUS', width: 150 },
-            { header: '时间', dataIndex: 'CREATETIME', width: 150 }
-            ],
-            viewConfig: {
-                enableTextSelection: true
-            }
-        })
+﻿<script type="text/javascript">
+    $(function () {
+        loadSynclistGrid('');
     })
-
-
 </script>
-<div>
-</div>
-<div id="div_foo">
+<div class="ibox-content">
+    <div class="table-responsive">
+        <table id="datagrid" class="easyui-datagrid" title="同步状态" style="height:auto;min-height:500px;max-height:800px" data-options="queryParams:{BUSITYPE:'SyncMsg'}">
+            <thead>
+                <tr>
+                    <th data-options="field: 'ID',width:80,checkbox:true"></th>
+                    <th data-options="field:'FWONO',width:200,sortable:true">FWO号</th>
+                    <th data-options="field:'SOURCE',width:200,sortable:true">来源</th>
+                    <th data-options="field:'TEXT',width:300,sortable:true">描述</th>
+                    <th data-options="field:'STATUS',width:150,sortable:true">状态</th>
+                    <th data-options="field:'CREATETIME',width:150,sortable:true">时间</th>
+                </tr>
+            </thead>
+        </table>
+        <div id="tb">
+            <div class="tb_search">
+                <form id="searchform" method="post">
+                    <input type="hidden" name="BUSITYPE" value="SyncMsg" />
+                    <table>
+                        <tr>
+                            <td class="search_margin">
+                                <select class="easyui-combobox" panelheight="auto">
+                                    <option>业务类型</option>
+                                </select>
+                            </td>
+                            <td>
+                                <select class="easyui-combobox combobox_width value" id="businessin_object" panelheight="auto" name="businessin_object"></select>
+                            </td>
+                            <td class="search_margin">
+                                <select class="easyui-combobox" id="search_code" panelheight="auto" name="ordercode"></select>
+                            </td>
+                            <td>
+                                <input class="easyui-textbox value placeholderclass" type="text" name="ordercode_value" placeholder="单据号" />
+                            </td>
 
-</div> 
+                            <td class="search_margin">
+                                <select class="easyui-combobox" id="search_operator" panelheight="auto" name="oprname"></select>
+                            </td>
+                            <td>
+                                <input class="easyui-textbox value placeholderclass" type="text" name="oprname_value" placeholder="操作人" />
+                            </td>
+                            <td class="search_margin">
+                                <select class="easyui-combobox" id="search_condition_date" panelheight="auto" name="orderdate"></select>
+                            </td>
+                            <td>
+                                <input class="easyui-datebox value  placeholderclass" name="startdate" placeholder="开始时间">
+                            </td>
+                            <td>
+                                <input class="easyui-datebox value  placeholderclass" name="stopdate" placeholder="结束时间">
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="search_margin">
+                                <select class="easyui-combobox" panelheight="auto">
+                                    <option>海关通关状态</option>
+                                </select>
+                            </td>
+                            <td>
+                                <select class="easyui-combobox value" id="customs_state" style="width:130px" panelheight="auto" name="customs_state"></select>
+                            </td>
+                            <td class="search_margin">
+                                <select class="easyui-combobox" panelheight="auto">
+                                    <option>关区代码</option>
+                                </select>
+                            </td>
+                            <td>
+                                <select class="easyui-combobox combobox_width value" id="CUSTOMDISTRICTCODE" name="CUSTOMDISTRICTCODE"></select>
+                            </td>
+                        </tr>
+                    </table>
+                </form>
+            </div>
+            <div class="tb_but">
+                <div class="but_left">
+                    <a class="btn btn-primary btn-xs" href="javascript:void(0)" onclick="export_form()"><i class="fa fa-share-square-o" aria-hidden="true"></i> 导出</a>
+                </div>
+                <div class="but_right">
+                    <a class="btn btn-primary btn-xs" href="javascript:void(0)" onclick="search_form()"><i class="icon-search"></i> 搜索</a>
+                    <a class="btn btn-primary btn-xs" href="javascript:void(0)" onclick="reset_form()"><i class="fa fa-retweet" aria-hidden="true"></i> 重置</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- end ibox-content -->
+</div>
