--- a/Views/Common/SyncMsg_List.cshtml
+++ b/Views/Common/SyncMsg_List.cshtml
@@ -1,6 +1,38 @@
 ﻿<script type="text/javascript">
+    // 查询条件  --单据号
+    var search_code = [
+        {
+            code: 'FWONO', name: 'FWO号', selected: true
+        }
+    ];
+    // 查询条件  --来源
+    var businessin_source = [
+        { name: 'SAP->新关务' },
+        { name: '新关务->SAP' },
+        { name: '新关务->单证云' }
+    ];
+    // 查询条件  --状态
+    var businessin_status = [
+        { name: '成功' },
+        { name: '失败' }
+    ];
     $(function () {
         loadSynclistGrid('');
+        $('#searchform #search_code').combobox({
+            data: search_code,
+            valueField: 'code',
+            textField: 'name'
+        });
+        $('#searchform #businessin_source').combobox({
+            data: businessin_source,
+            valueField: 'name',
+            textField: 'name'
+        });
+        $('#searchform #businessin_status').combobox({
+            data: businessin_status,
+            valueField: 'name',
+            textField: 'name'
+        });
     })
 </script>
 <div class="ibox-content">
@@ -24,52 +56,37 @@
                     <table>
                         <tr>
                             <td class="search_margin">
-                                <select class="easyui-combobox" panelheight="auto">
-                                    <option>业务类型</option>
-                                </select>
-                            </td>
-                            <td>
-                                <select class="easyui-combobox combobox_width value" id="businessin_object" panelheight="auto" name="businessin_object"></select>
-                            </td>
-                            <td class="search_margin">
                                 <select class="easyui-combobox" id="search_code" panelheight="auto" name="ordercode"></select>
                             </td>
                             <td>
                                 <input class="easyui-textbox value placeholderclass" type="text" name="ordercode_value" placeholder="单据号" />
                             </td>
-
-                            <td class="search_margin">
-                                <select class="easyui-combobox" id="search_operator" panelheight="auto" name="oprname"></select>
-                            </td>
-                            <td>
-                                <input class="easyui-textbox value placeholderclass" type="text" name="oprname_value" placeholder="操作人" />
-                            </td>
-                            <td class="search_margin">
-                                <select class="easyui-combobox" id="search_condition_date" panelheight="auto" name="orderdate"></select>
-                            </td>
-                            <td>
-                                <input class="easyui-datebox value  placeholderclass" name="startdate" placeholder="开始时间">
-                            </td>
-                            <td>
-                                <input class="easyui-datebox value  placeholderclass" name="stopdate" placeholder="结束时间">
-                            </td>
-                        </tr>
-                        <tr>
                             <td class="search_margin">
                                 <select class="easyui-combobox" panelheight="auto">
-                                    <option>海关通关状态</option>
+                                    <option>来源</option>
                                 </select>
                             </td>
                             <td>
-                                <select class="easyui-combobox value" id="customs_state" style="width:130px" panelheight="auto" name="customs_state"></select>
+                                <select class="easyui-combobox combobox_width value" id="businessin_source" panelheight="auto" name="businessin_source"></select>
                             </td>
                             <td class="search_margin">
                                 <select class="easyui-combobox" panelheight="auto">
-                                    <option>关区代码</option>
+                                    <option>状态</option>
                                 </select>
                             </td>
                             <td>
-                                <select class="easyui-combobox combobox_width value" id="CUSTOMDISTRICTCODE" name="CUSTOMDISTRICTCODE"></select>
+                                <select class="easyui-combobox combobox_width value" id="businessin_status" panelheight="auto" name="businessin_status"></select>
+                            </td>
+                            <td class="search_margin">
+                                <select class="easyui-combobox" panelheight="auto">
+                                    <option>时间</option>
+                                </select>
+                            </td>
+                            <td>
+                                <input class="easyui-datebox value  placeholderclass" name="starttime" placeholder="开始时间">
+                            </td>
+                            <td>
+                                <input class="easyui-datebox value  placeholderclass" name="stoptime" placeholder="结束时间">
                             </td>
                         </tr>
                     </table>
