--- a/Views/Common/SyncMsg_List.cshtml
+++ b/Views/Common/SyncMsg_List.cshtml
@@ -67,7 +67,7 @@
                                 </select>
                             </td>
                             <td>
-                                <select class="easyui-combobox combobox_width value" id="businessin_source" panelheight="auto" name="businessin_source"></select>
+                                <select class="easyui-combobox combobox_width value" editable="false" id="businessin_source" panelheight="auto" name="businessin_source"></select>
                             </td>
                             <td class="search_margin">
                                 <select class="easyui-combobox" panelheight="auto">
@@ -75,7 +75,7 @@
                                 </select>
                             </td>
                             <td>
-                                <select class="easyui-combobox combobox_width value" id="businessin_status" panelheight="auto" name="businessin_status"></select>
+                                <select class="easyui-combobox combobox_width value" editable="false" id="businessin_status" panelheight="auto" name="businessin_status"></select>
                             </td>
                             <td class="search_margin">
                                 <select class="easyui-combobox" panelheight="auto">
@@ -83,10 +83,10 @@
                                 </select>
                             </td>
                             <td>
-                                <input class="easyui-datebox value  placeholderclass" name="starttime" placeholder="开始时间">
+                                <input class="easyui-datebox value  placeholderclass" editable="false" name="starttime" placeholder="开始时间">
                             </td>
                             <td>
-                                <input class="easyui-datebox value  placeholderclass" name="stoptime" placeholder="结束时间">
+                                <input class="easyui-datebox value  placeholderclass" editable="false" name="stoptime" placeholder="结束时间">
                             </td>
                         </tr>
                     </table>
