--- a/Views/Declare/OnelineIn_Edit.cshtml
+++ b/Views/Declare/OnelineIn_Edit.cshtml
@@ -90,7 +90,7 @@
             <tr>
                 <td>
                     <label for="GUANWUJIESHOUTIME"> 关务接受时间:</label>
-                    <input class="easyui-datetimebox  time_input " id="GUANWUJIESHOUTIME" data-options="text:'填充时间'" type="text" editable="false" name="GUANWUJIESHOUTIME" />
+                    <input class="easyui-datetimebox  time_input " id="GUANWUJIESHOUTIME" datatype="GUANWUJIESHOU" data-options="text:'填充时间'"  editable="false" name="GUANWUJIESHOUTIME" />
                     <a href="javascript:void(0)" datatype="GUANWUJIESHOU" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>
                 </td>
                 <td>
@@ -99,7 +99,7 @@
                 </td>
                 <td>
                     <label for="BAORUHAIGUANTIME"> 报入海关时间:</label>
-                    <input class="easyui-textbox time_input" type="text" id="BAORUHAIGUANTIME" name="BAORUHAIGUANTIME" editable="false"  />
+                    <input class="easyui-textbox time_input" type="text" id="BAORUHAIGUANTIME" name="BAORUHAIGUANTIME" editable="false" />
                     <a href="javascript:void(0)" datatype="BAORUHAIGUAN" class="easyui-linkbutton fillingData DECLSTATUS"><i class="icon-time"></i></a>
                 </td>
                 <td>
@@ -326,19 +326,42 @@
 
         $('.time_input').datetimebox({
             stopFirstChangeEvent: true,
-            onChange: function() {
+            onChange: function () {
                 var options = $(this).datetimebox('options');
 
-                if(options.stopFirstChangeEvent) {
+                if (options.stopFirstChangeEvent) {
                     options.stopFirstChangeEvent = false;
                     return;
                 }
-                //以下写onchange的逻辑
-                alert('1');
+                debugger;
+                var type = this.getAttribute("datatype");
+                var id_val = "#" + this.id;
+                var date = $(id_val).datetimebox('getValue');
+                var ID = getQueryString('ID');
+                $.ajax({
+                    url: '/Order/Edit_Ajax_Scene',// 跳转到 action
+                    data: {
+                        'ID': ID,
+                        'type': type,
+                        'date': date
+                    },
+                    type: 'post',
+                    dataType: 'json',
+                    success: function (data) {
+                        if (data.Success == true) {
+                            var name = "#" + type + 'USERNAME';
+                            $(name).textbox('setValue', data.name);
+                        } else {
+                            $.messager.alert('异常', '联系管理员');
+                        }
+                    },
+
+                });
+
             }
         });
 
 
     });
-    
+
 </script>
